--- a/answers.html
+++ b/answers.html
@@ -43,6 +43,278 @@
     <!-- Main landmark: primary content of this page -->
     <main>
       <section>
+        <h2>Part A: Find Mistakes (Identify + Fix)</h2>
+        <table border="1">
+          <caption>
+            Common HTML structure and accessibility mistakes
+          </caption>
+
+          <thead>
+            <tr>
+              <th scope="col">UI Element / Issue</th>
+              <th scope="col">Wrong HTML (with mistake)</th>
+              <th scope="col">Correct UI Element</th>
+              <th scope="col">Correct HTML</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <th scope="row">
+                Multiple <code>h1</code> elements used on a page
+              </th>
+              <td>
+                <pre><code>&lt;h1&gt;Page Title&lt;/h1&gt;
+&lt;h1&gt;Section Title&lt;/h1&gt;</code></pre>
+              </td>
+              <td>Single main page heading</td>
+              <td>
+                <pre><code>&lt;h1&gt;Page Title&lt;/h1&gt;
+&lt;h2&gt;Section Title&lt;/h2&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">
+                <code>nav</code> used for non-navigation content
+              </th>
+              <td>
+                <pre><code>&lt;nav&gt;
+  &lt;p&gt;Welcome to my website&lt;/p&gt;
+&lt;/nav&gt;</code></pre>
+              </td>
+              <td><code>nav</code> contains navigation links only</td>
+              <td>
+                <pre><code>&lt;header&gt;
+  &lt;p&gt;Welcome to my website&lt;/p&gt;
+&lt;/header&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">Missing <code>alt</code> attribute on image</th>
+              <td>
+                <pre><code>&lt;img src="diagram.png"&gt;</code></pre>
+              </td>
+              <td>Image with alternative text</td>
+              <td>
+                <pre><code>&lt;img src="diagram.png" alt="Norman action cycle diagram"&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">Decorative image given meaningless alt text</th>
+              <td>
+                <pre><code>&lt;img src="line.png" alt="line"&gt;</code></pre>
+              </td>
+              <td>Decorative image with empty alt</td>
+              <td>
+                <pre><code>&lt;img src="line.png" alt=""&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">Form input missing a label</th>
+              <td>
+                <pre><code>&lt;input type="text" name="email"&gt;</code></pre>
+              </td>
+              <td>Form input with associated label</td>
+              <td>
+                <pre><code>&lt;label for="email"&gt;Email&lt;/label&gt;
+&lt;input type="text" id="email" name="email"&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">List items not wrapped in a list</th>
+              <td>
+                <pre><code>&lt;p&gt;Item 1&lt;/p&gt;
+&lt;p&gt;Item 2&lt;/p&gt;</code></pre>
+              </td>
+              <td>Proper unordered list</td>
+              <td>
+                <pre><code>&lt;ul&gt;
+  &lt;li&gt;Item 1&lt;/li&gt;
+  &lt;li&gt;Item 2&lt;/li&gt;
+&lt;/ul&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row"><code>main</code> element used more than once</th>
+              <td>
+                <pre><code>&lt;main&gt;Content A&lt;/main&gt;
+&lt;main&gt;Content B&lt;/main&gt;</code></pre>
+              </td>
+              <td>Single main content landmark</td>
+              <td>
+                <pre><code>&lt;main&gt;
+  Content A
+  Content B
+&lt;/main&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">
+                Table header cells use <code>td</code> instead of
+                <code>th</code>
+              </th>
+              <td>
+                <pre><code>&lt;tr&gt;
+  &lt;td&gt;Name&lt;/td&gt;
+  &lt;td&gt;Score&lt;/td&gt;
+&lt;/tr&gt;</code></pre>
+              </td>
+              <td>Header cells marked correctly</td>
+              <td>
+                <pre><code>&lt;tr&gt;
+  &lt;th scope="col"&gt;Name&lt;/th&gt;
+  &lt;th scope="col"&gt;Score&lt;/th&gt;
+&lt;/tr&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">
+                Clickable text styled as button instead of using
+                <code>button</code>
+              </th>
+              <td>
+                <pre><code>&lt;div&gt;Submit&lt;/div&gt;</code></pre>
+              </td>
+              <td>Semantic button element</td>
+              <td>
+                <pre><code>&lt;button type="submit"&gt;Submit&lt;/button&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">
+                Using <code>div</code> instead of <code>section</code> for
+                thematic grouping
+              </th>
+              <td>
+                <pre><code>&lt;div&gt;
+  &lt;h2&gt;Lecture Notes&lt;/h2&gt;
+&lt;/div&gt;</code></pre>
+              </td>
+              <td>Thematic content section</td>
+              <td>
+                <pre><code>&lt;section&gt;
+  &lt;h2&gt;Lecture Notes&lt;/h2&gt;
+&lt;/section&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">Form button missing type attribute</th>
+              <td>
+                <pre><code>&lt;button&gt;Submit&lt;/button&gt;</code></pre>
+              </td>
+              <td>Explicit button type</td>
+              <td>
+                <pre><code>&lt;button type="submit"&gt;Submit&lt;/button&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">
+                Image used as link without descriptive alt text
+              </th>
+              <td>
+                <pre><code>&lt;a href="home.html"&gt;
+  &lt;img src="home.png" alt=""&gt;
+&lt;/a&gt;</code></pre>
+              </td>
+              <td>Linked image with descriptive alt</td>
+              <td>
+                <pre><code>&lt;a href="home.html"&gt;
+  &lt;img src="home.png" alt="Go to home page"&gt;
+&lt;/a&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">Using <code>strong</code> for headings</th>
+              <td>
+                <pre><code>&lt;strong&gt;Lecture 1&lt;/strong&gt;</code></pre>
+              </td>
+              <td>Proper heading element</td>
+              <td>
+                <pre><code>&lt;h2&gt;Lecture 1&lt;/h2&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">Empty link with no accessible name</th>
+              <td>
+                <pre><code>&lt;a href="next.html"&gt;&lt;/a&gt;</code></pre>
+              </td>
+              <td>Link with descriptive text</td>
+              <td>
+                <pre><code>&lt;a href="next.html"&gt;Next page&lt;/a&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">
+                Using <code>span</code> instead of <code>label</code> for form
+                text
+              </th>
+              <td>
+                <pre><code>&lt;span&gt;Name&lt;/span&gt;
+&lt;input type="text"&gt;</code></pre>
+              </td>
+              <td>Proper form labeling</td>
+              <td>
+                <pre><code>&lt;label for="name"&gt;Name&lt;/label&gt;
+&lt;input id="name" type="text"&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">Paragraph used to wrap block elements</th>
+              <td>
+                <pre><code>&lt;p&gt;
+  &lt;section&gt;Content&lt;/section&gt;
+&lt;/p&gt;</code></pre>
+              </td>
+              <td>Block elements not nested in paragraphs</td>
+              <td>
+                <pre><code>&lt;section&gt;Content&lt;/section&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">
+                Missing <code>lang</code> attribute on <code>html</code>
+              </th>
+              <td>
+                <pre><code>&lt;html&gt;</code></pre>
+              </td>
+              <td>Language specified for accessibility</td>
+              <td>
+                <pre><code>&lt;html lang="en"&gt;</code></pre>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">Using table for layout instead of data</th>
+              <td>
+                <pre><code>&lt;table&gt;
+  &lt;tr&gt;&lt;td&gt;Header&lt;/td&gt;&lt;/tr&gt;
+&lt;/table&gt;</code></pre>
+              </td>
+              <td>Layout using semantic structure</td>
+              <td>
+                <pre><code>&lt;header&gt;Header&lt;/header&gt;</code></pre>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <section>
         <h2>Part B: True / False</h2>
         <ol>
           <li>
