--- a/assignment01.html
+++ b/assignment01.html
@@ -335,97 +335,100 @@
           semantic HTML, navigation structure, accessibility basics, and tables.
         </p>
 
-        <h3>Part A: Find Mistakes (Identify + Fix)</h3>
-        <p>
-          In the exam, you will (1) identify the mistake in one sentence and (2)
-          write the corrected HTML.
-        </p>
+        <article>
+          <h3>Part A: Find Mistakes (Identify + Fix)</h3>
+          <p>
+            In the exam, you will (1) identify the mistake in one sentence and
+            (2) write the corrected HTML.
+          </p>
 
-        <table border="1">
-          <caption>
-            Sample exam questions: fix common HTML structure and accessibility
-            mistakes
-          </caption>
+          <table border="1">
+            <caption>
+              Sample exam questions: fix common HTML structure and accessibility
+              mistakes
+            </caption>
 
-          <thead>
-            <tr>
-              <th scope="col">UI Element / Issue</th>
-              <th scope="col">Wrong HTML (with mistake)</th>
-              <th scope="col">Correct UI Element</th>
-              <th scope="col">Correct HTML</th>
-            </tr>
-          </thead>
+            <thead>
+              <tr>
+                <th scope="col">UI Element / Issue</th>
+                <th scope="col">Wrong HTML (with mistake)</th>
+                <th scope="col">Correct UI Element</th>
+                <th scope="col">Correct HTML</th>
+              </tr>
+            </thead>
 
-          <tbody>
-            <tr>
-              <th scope="row">
-                Navigation menu has a link directly inside
-                <code>ul</code> (missing <code>li</code>)
-              </th>
-              <td>
-                <pre><code>&lt;nav&gt;
+            <tbody>
+              <tr>
+                <th scope="row">
+                  Navigation menu has a link directly inside
+                  <code>ul</code> (missing <code>li</code>)
+                </th>
+                <td>
+                  <pre><code>&lt;nav&gt;
   &lt;ul&gt;
     &lt;a href="index.html"&gt;Home&lt;/a&gt;
     &lt;li&gt;&lt;a href="cv.html"&gt;CV&lt;/a&gt;&lt;/li&gt;
   &lt;/ul&gt;
 &lt;/nav&gt;</code></pre>
-              </td>
-              <td>Navigation list where each link is inside a list item</td>
-              <td>
-                <pre><code>&lt;nav aria-label="Primary navigation"&gt;
+                </td>
+                <td>Navigation list where each link is inside a list item</td>
+                <td>
+                  <pre><code>&lt;nav aria-label="Primary navigation"&gt;
   &lt;ul&gt;
     &lt;li&gt;&lt;a href="index.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="cv.html"&gt;CV&lt;/a&gt;&lt;/li&gt;
   &lt;/ul&gt;
 &lt;/nav&gt;</code></pre>
-              </td>
-            </tr>
+                </td>
+              </tr>
 
-            <tr>
-              <th scope="row">
-                Form label is not associated with its control (<code>for</code>
-                ≠ <code>id</code>)
-              </th>
-              <td>
-                <pre><code>&lt;label for="msg"&gt;Message&lt;/label&gt;
+              <tr>
+                <th scope="row">
+                  Form label is not associated with its control (<code
+                    >for</code
+                  >
+                  ≠ <code>id</code>)
+                </th>
+                <td>
+                  <pre><code>&lt;label for="msg"&gt;Message&lt;/label&gt;
 &lt;textarea id="message" name="message"&gt;&lt;/textarea&gt;</code></pre>
-              </td>
-              <td>Label correctly connected to form control</td>
-              <td>
-                <pre><code>&lt;label for="message"&gt;Message&lt;/label&gt;
+                </td>
+                <td>Label correctly connected to form control</td>
+                <td>
+                  <pre><code>&lt;label for="message"&gt;Message&lt;/label&gt;
 &lt;textarea id="message" name="message"&gt;&lt;/textarea&gt;</code></pre>
-              </td>
-            </tr>
+                </td>
+              </tr>
 
-            <tr>
-              <th scope="row">
-                Heading hierarchy is incorrect (skips a level)
-              </th>
-              <td>
-                <pre><code>&lt;h1&gt;Interaction Analysis&lt;/h1&gt;
+              <tr>
+                <th scope="row">
+                  Heading hierarchy is incorrect (skips a level)
+                </th>
+                <td>
+                  <pre><code>&lt;h1&gt;Interaction Analysis&lt;/h1&gt;
 &lt;h3&gt;Norman vs GOMS&lt;/h3&gt;</code></pre>
-              </td>
-              <td>Headings follow proper hierarchy (no skipping levels)</td>
-              <td>
-                <pre><code>&lt;h1&gt;Interaction Analysis&lt;/h1&gt;
+                </td>
+                <td>Headings follow proper hierarchy (no skipping levels)</td>
+                <td>
+                  <pre><code>&lt;h1&gt;Interaction Analysis&lt;/h1&gt;
 &lt;h2&gt;Norman vs GOMS&lt;/h2&gt;</code></pre>
-              </td>
-            </tr>
+                </td>
+              </tr>
 
-            <tr>
-              <th scope="row">
-                Comparison table missing <code>caption</code> and header cells
-                (<code>th</code>)
-              </th>
-              <td>
-                <pre><code>&lt;table&gt;
+              <tr>
+                <th scope="row">
+                  Comparison table missing <code>caption</code> and header cells
+                  (<code>th</code>)
+                </th>
+                <td>
+                  <pre><code>&lt;table&gt;
   &lt;tr&gt;&lt;td&gt;Model&lt;/td&gt;&lt;td&gt;Predicts&lt;/td&gt;&lt;/tr&gt;
   &lt;tr&gt;&lt;td&gt;KLM&lt;/td&gt;&lt;td&gt;Time&lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;</code></pre>
-              </td>
-              <td>Accessible table with caption + headers + scope</td>
-              <td>
-                <pre><code>&lt;table&gt;
+                </td>
+                <td>Accessible table with caption + headers + scope</td>
+                <td>
+                  <pre><code>&lt;table&gt;
   &lt;caption&gt;Models and what they predict&lt;/caption&gt;
   &lt;thead&gt;
     &lt;tr&gt;
@@ -440,71 +443,75 @@
     &lt;/tr&gt;
   &lt;/tbody&gt;
 &lt;/table&gt;</code></pre>
-              </td>
-            </tr>
+                </td>
+              </tr>
 
-            <tr>
-              <th scope="row">
-                <code>aria-current</code> used incorrectly (more than one
-                “current page”)
-              </th>
-              <td>
-                <pre><code>&lt;nav aria-label="Primary navigation"&gt;
+              <tr>
+                <th scope="row">
+                  <code>aria-current</code> used incorrectly (more than one
+                  “current page”)
+                </th>
+                <td>
+                  <pre><code>&lt;nav aria-label="Primary navigation"&gt;
   &lt;ul&gt;
     &lt;li&gt;&lt;a href="index.html" aria-current="page"&gt;Home&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="cv.html" aria-current="page"&gt;CV&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="contact.html"&gt;Contact&lt;/a&gt;&lt;/li&gt;
   &lt;/ul&gt;
 &lt;/nav&gt;</code></pre>
-              </td>
-              <td>Only the active page link is marked as current</td>
-              <td>
-                <pre><code>&lt;nav aria-label="Primary navigation"&gt;
+                </td>
+                <td>Only the active page link is marked as current</td>
+                <td>
+                  <pre><code>&lt;nav aria-label="Primary navigation"&gt;
   &lt;ul&gt;
     &lt;li&gt;&lt;a href="index.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="cv.html" aria-current="page"&gt;CV&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="contact.html"&gt;Contact&lt;/a&gt;&lt;/li&gt;
   &lt;/ul&gt;
 &lt;/nav&gt;</code></pre>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-        <h3>Part B: True / False</h3>
-        <ul>
-          <li>
-            <strong>T/F:</strong> Every link inside <code>&lt;ul&gt;</code> must
-            be placed inside an <code>&lt;li&gt;</code>.
-          </li>
-          <li>
-            <strong>T/F:</strong> A page may have multiple
-            <code>&lt;h1&gt;</code> headings to make text larger.
-          </li>
-          <li>
-            <strong>T/F:</strong> <code>aria-current="page"</code> should be
-            used on the active navigation item.
-          </li>
-          <li>
-            <strong>T/F:</strong> A form is accessible even if it has no
-            <code>&lt;label&gt;</code> elements.
-          </li>
-          <li>
-            <strong>T/F:</strong> KLM predicts execution time for expert,
-            error-free performance.
-          </li>
-        </ul>
-
-        <h3>Part C: Short Answer</h3>
-        <ul>
-          <li>
-            Explain the difference between a semantic element (e.g.,
-            <code>nav</code>) and a generic element (e.g., <code>div</code>).
-          </li>
-          <li>
-            Why does KLM not model high-level planning and interpretation?
-          </li>
-        </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </article>
+        <article>
+          <h3>Part B: True / False</h3>
+          <ul>
+            <li>
+              <strong>T/F:</strong> Every link inside
+              <code>&lt;ul&gt;</code> must be placed inside an
+              <code>&lt;li&gt;</code>.
+            </li>
+            <li>
+              <strong>T/F:</strong> A page may have multiple
+              <code>&lt;h1&gt;</code> headings to make text larger.
+            </li>
+            <li>
+              <strong>T/F:</strong> <code>aria-current="page"</code> should be
+              used on the active navigation item.
+            </li>
+            <li>
+              <strong>T/F:</strong> A form is accessible even if it has no
+              <code>&lt;label&gt;</code> elements.
+            </li>
+            <li>
+              <strong>T/F:</strong> KLM predicts execution time for expert,
+              error-free performance.
+            </li>
+          </ul>
+        </article>
+        <article>
+          <h3>Part C: Short Answer</h3>
+          <ul>
+            <li>
+              Explain the difference between a semantic element (e.g.,
+              <code>nav</code>) and a generic element (e.g., <code>div</code>).
+            </li>
+            <li>
+              Why does KLM not model high-level planning and interpretation?
+            </li>
+          </ul>
+        </article>
       </section>
 
       <section style="background-color: turquoise">
